# tinkertoy

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  form_data.db  main.py  pyproject.toml  test_app.py  tinkertoy.sh  tinkertoy_azure_webapp_deploy.sh  tinkertoy_local_dockerimage.sh
.github/workflows/: docker-image.yml
docker/: Dockerfile
fastapi/: app.py  apprunner.yaml
opentofu/: .terraform.lock.hcl  aws.tofu  aws_provider.tofu  oracle_provider.tofu
raspberrypi/: devops.sh
templates/: form.j2  table.j2
terraform_aws/: dynamoDBTable.tf  ec2.tf  ec2_machine.tf  s3bucket.tf  tinkertoy_user_data.sh  variables.tf
terraform_docker/: README.md  main.tf  terraform.tfstate  terraform.tfstate.backup
tests/: test_app.py
