[project]
name = "tinkertoy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.129.1",
    "gunicorn>=25.1.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pysqlite3>=0.6.0",
    "uvicorn>=0.41.0",
]
